lab7 - Asynchronic Task

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="LabelMain">Lab4 Android</string>
     <string name="LabelCategory">Wybierz kawe</string>
     <string name="LabelCoffe">Wybany napoj</string>
+    <string name="favorite">Favorite</string>
+    <string name="favorites">Your favorite drinks:</string>
 
 </resources>
